--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "test": "npm run eslint"
   },
   "devDependencies": {
+    "css-loader": "5.0.1",
     "eslint": "6.1.0",
     "eslint-config-htmlacademy": "0.5.2",
+    "style-loader": "2.0.0",
     "webpack": "5.10.3",
     "webpack-cli": "4.2.0"
   },
   "engines": {
     "node": "10"
+  },
+  "dependencies": {
+    "flatpickr": "^4.6.9"
   }
 }
