--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eslint-config-htmlacademy": "0.5.2",
     "style-loader": "2.0.0",
     "webpack": "5.10.3",
-    "webpack-cli": "4.2.0"
+    "webpack-cli": "4.2.0",
+    "webpack-dev-server": "3.11.2"
   },
   "engines": {
     "node": "10"
